# coinor-cbc

./: .travis.yml  CMakeLists.txt  CbcConfig.cmake.in  README  README.md
Cbc/: CMakeLists.txt  config.h.cmake.in
Cgl/: CMakeLists.txt  config.h.cmake.in
Clp/: CMakeLists.txt  config.h.cmake.in
CoinUtils/: CMakeLists.txt  config.h.cmake.in
CoinUtils/src/: config.h.cmake.in  config_coinutils.h.cmake.in
Osi/: CMakeLists.txt  config.h.cmake.in
cmake/: CbcConfig.cmake.in  Makefile  ParseAc.cmake
cmake/docker/alpine/: InstallDockerfile
cmake/docker/ubuntu/: InstallDockerfile
cmake/sample/: CMakeLists.txt
